RESOLVED FIXED74329
DFG GetByVal CSE incorrectly assumes that a non-matching PutByVal cannot clobber
https://bugs.webkit.org/show_bug.cgi?id=74329
Summary DFG GetByVal CSE incorrectly assumes that a non-matching PutByVal cannot clobber
Filip Pizlo
Reported 2011-12-12 14:02:02 PST
Patch with test case forthcoming.
Attachments
the patch (136.67 KB, patch)
2011-12-12 14:03 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2011-12-12 14:03:25 PST
Created attachment 118840 [details] the patch
Filip Pizlo
Comment 2 2011-12-12 14:13:47 PST
Filip Pizlo
Comment 3 2011-12-12 14:15:18 PST
Note You need to log in before you can comment on or make changes to this bug.