DFG GetByVal CSE incorrectly assumes that a non-matching PutByVal cannot clobber https://bugs.webkit.org/show_bug.cgi?id=74329

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::getByValLoadElimination):

LayoutTests:

* fast/js/dfg-get-by-val-clobber-expected.txt: Added.
* fast/js/dfg-get-by-val-clobber.html: Added.
* fast/js/script-tests/dfg-get-by-val-clobber.js: Added.
(doAccesses):



Canonical link: https://commits.webkit.org/91018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102623 268f45cc-cd09-0410-ab3c-d52691b4dbfc